[FIX] querydsl error fix ver0.13

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
-buildscript {
-    ext {
-        queryDslVersion = "5.0.0"
-    }
-}
+//buildscript {
+//    ext {
+//        queryDslVersion = "5.0.0"
+//    }
+//}
 
 plugins {
     id 'java'
