--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    querydsl.extendsFrom compileClasspath
 }
 
 
@@ -54,10 +55,18 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
-
-// querydsl 사용할 경로 지정합니다. 현재 지정한 부분은 .gitignore에 포함되므로 git에 올라가지 않습니다.
 def querydslDir = "src/main/generated"
+
+clean {
+    delete file(querydslDir) // 인텔리제이 Annotation processor 생성물 생성위치
+}
+
+/**
+ * 인텔리제이 Annotation processor 에 생성되는 'src/main/generated' 디렉터리 삭제
+ */
+task cleanGeneatedDir(type: Delete) { // 인텔리제이 annotation processor 가 생성한 Q클래스가 clean 태스크로 삭제되는 게 불편하다면 둘 중에 하나를 선택
+    delete file(querydslDir)
+}
 
 // JPA 사용여부 및 사용 경로 설정
 querydsl {
@@ -69,10 +78,7 @@ sourceSets {
     main.java.srcDir querydslDir
 }
 
-configurations {
-    querydsl.extendsFrom compileClasspath
-}
-
 compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
+
