--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     generate-ddl: true
     open-in-view: false
-    show-sql: true
+#    show-sql: true
     hibernate:
       ddl-auto: update  # option type: create, create-drop, update, validate, none
       naming:
@@ -21,7 +21,7 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         storage_engine: innodb
         format_sql: true
-        show_sql: true
+#        show_sql: true
 
   security:
     oauth2:
